--- a/w3bstream.ini
+++ b/w3bstream.ini
@@ -5,4 +5,11 @@ lang=rust
 input=/
 output=./.w3bstream
 watchDir=.w3bstream/wasm32-wasi/release/**.wasm
-extraCompileOptions=--release
+extraCompileOptions=
+
+[studio:options]
+dev=true
+projectName=DEV_PROJECT
+payload={"123": "456"}
+
+
